--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,9 @@
 * {
-    font-family: 'Raleway', sans-serif;
-    margin: 0;
-    padding: 0;
-    
-} 
+  font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
 figure:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
