--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -98,7 +98,7 @@
     display: flex;
     border: 1px solid #f2f2f2;
     border-radius: 1rem;
-    width: fit-content;
+    width: min-content;
   }
 
   input {
